# python-repo-template

./: .pre-commit-config.yaml  makefile  pyproject.toml  runSync.py
templates/: .gptignore  .pre-commit-config.yaml  makefile
