[tool.poetry]
name = "python-repo-template"
version = "0.1.0"
description = ""
authors = ["Ricardo Henriques <paxcalpt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
toml = "^0.10.2"
gptrepo = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
